--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "next": "^12.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +18,7 @@
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.2",
     "postcss": "^8.4.31",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3.3.5"
   }
 }
