--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
- },
+  },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.2",
     "next": "^12.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
